<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">


    <TextView
        android:id="@+id/imgID_textView"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/image_id_string" />

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_imageView"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_weight="33"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/img_title_textview"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/image_name_string"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/panelBackground"
            android:contentDescription="@string/delete_icon_description"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>