<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlImagActivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".DownloadImageActivity">

    <EditText
        android:id="@+id/imgURLEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:ems="10"
        android:hint="@string/imgURLHint"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/imgTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:ems="10"
        android:hint="@string/imgTitleHint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/downloadButtonText" />
</android.widget.LinearLayout>